--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+/.bundle/
+/.yardoc
+/_yardoc/
+/coverage/
+/doc/
+/pkg/
+/spec/reports/
+/tmp/
+.rspec_status
+Gemfile.lock
 viberroo-*
 .byebug_history
 .DS_Store
