--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -1,31 +1,13 @@
-name: Viberroo
+name: Publish
 
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
 
 jobs:
-  rspec-test:
-    name: RSpec
-    runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Ruby 2.6
-      uses: actions/setup-ruby@v1
-      with:
-        version: 2.6.x
-    - name: Install dependencies
-      run: gem install bundler && bundle
-    - name: Run specs
-      run: rspec
-
   build:
     name: Build + Publish
     runs-on: ubuntu-latest
-    needs: [rspec-test]
 
     steps:
     - uses: actions/checkout@v2
